[gd_scene load_steps=81 format=2]

[ext_resource path="res://assets/textures/enemies/golem/Golem_IdleA.png" type="Texture" id=1]
[ext_resource path="res://src/entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://src/entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/golem/Golem_DeathB.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/enemies/golem/Golem_IdleB.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/enemies/golem/Golem_DeathA.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/enemies/golem/Golem_AttackB.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/enemies/golem/Golem_AttackA.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/enemies/golem/Golem_Full.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/enemies/golem/Golem_Run.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 10 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 10 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 10 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 10 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 10 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 10 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 11 )
region = Rect2( 256, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 320, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "alert",
"speed": 10.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "die_alert",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "go_normal",
"speed": 10.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle_alert",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "walk",
"speed": 2.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "walk_alert",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 12.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 192.0

[node name="Turret" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -18.0339 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 7 )
animation = "walk_alert"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -12.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.0428963, -18.0659 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
visible = false
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="animation_finished" from="Body" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
